--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
   <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
     integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
     crossorigin="anonymous"></script>
+  <link rel="stylesheet" type="text/css" href="node_modules/react-table/react-table.css">
   <title>TRAMSA</title>
 </head>
 
